--- a/package.json
+++ b/package.json
@@ -51,6 +51,7 @@
     "publint": "^0.1.9",
     "svelte": "^4.2.7",
     "svelte-check": "^3.6.0",
+    "svelte-headless-table": "^0.18.2",
     "tailwindcss": "^3.4.3",
     "tslib": "^2.4.1",
     "typescript": "^5.0.0",
